[package]
name = "device"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.5.0", features = ["nightly", "integrated-timers", "executor-thread"] }
embassy-net = { version = "0.4.0", features = ["proto-ipv4", "tcp", "medium-ieee802154", "dhcpv4"] }
embassy-time = "0.3.0"
embassy-sync = "0.5.0"
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println"
] }
esp-hal = { version = "0.17.0", features = [ "esp32", "embassy", "async", "embassy-time-timg0", "embassy-executor-thread" ] }
esp-println = { version = "0.9.0", features = ["esp32"] }
esp-wifi = { version = "0.5.0", features = ["esp32", "wifi", "embassy-net"] }
embedded-hal-async = "1.0.0-rc.1"
embedded-io-async = "0.6.1"
portable-atomic = "1.5.1"
static_cell = {version = "2.1.0", features = ["nightly"] }
heapless = "0.8.0"
serde-json-core = "0.5.1"
rust-mqtt = { version = "0.3.0", default-features = false }
serde = { version = "1.0.198", default-features = false, features = ["derive"] }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[dev-dependencies]
mockall = "0.12.1"

[profile.dev.package.esp-wifi]
opt-level = 3
